# optitrack-driver

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  version.bzl
lcmtypes/: BUILD.bazel  optitrack_forceplate_description_t.lcm  optitrack_forceplate_t.lcm
src/: BUILD.bazel  optitrack_client.py
src/optitrack/: client.py
wheel/: BUILD.bazel
