module(
    name = "optitrack-driver",
    bazel_compatibility = [">=8.0.0"],
)

bazel_dep(name = "rules_cc", version = "0.2.10")
bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "platforms", version = "1.0.0")

# TODO(jwnimmer-tri) Pin to >1.5.1 once there is a newer release tag.
LCM_VERSION = "4f9f586e9fda1ab2d5e12427386226519f65b6de"

bazel_dep(name = "lcm")
archive_override(
    module_name = "lcm",
    sha256 = "d2de73ea17993d3586eb9559b48ac3e35dd68064ad6abbdd3e0d4081e5b90685",  # noqa
    strip_prefix = "lcm-{}".format(LCM_VERSION),
    url = "https://github.com/lcm-proj/lcm/archive/{}.tar.gz".format(LCM_VERSION),
)
