module(
    name = "optitrack-driver",
    bazel_compatibility = [">=8.0.0"],
)

bazel_dep(name = "lcm", version = "1.5.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.10")
bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "rules_python", version = "1.6.3")
